fix: grid gap

--- a/styles/components/basic.css
+++ b/styles/components/basic.css
@@ -438,7 +438,7 @@
   .newFeedGrid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(422px, 1px));
-    grid-gap: 22px;
+    grid-gap: 40px 22px;
   }
 
   .reportModalItemsContainer {
